--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "ng-multiselect-dropdown": "^1.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.0",
